--- a/style.css
+++ b/style.css
@@ -14,18 +14,42 @@ html {
 .row {
     width: 100%;
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 0 auto;          
   }
+
+.root {
+    padding: 0 40px;
+}
+
+p {
+    display: flex;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
 
 .nav__container {
     width: 100%;
     max-width: 1200px;
-    padding: 0 24px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
 
+}
+
+.container {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+.img__wrapper {
+    width: 50%;
+    display: flex;
+    height: 30vh;
+    width: vw;
 }
 
 #navi {
@@ -41,7 +65,7 @@ li {
   }
 
 .logo {
-    width: 160px;
+    width: 116px;
 }
 
 .nav__link {
@@ -54,18 +78,36 @@ li {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 96px 0 96px 0;
+    background-color: pink;
 }
 
 .section__landing {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: calc(100vh - 90px);
 }
 
-.landing {
+.landing__description {
     width: 40%;
-    margin-left: 24px;
+}
 
+.landing__title {
+    font-size: 40px;
+    padding-bottom: 32px;
+}
+
+.landing__para {
+    padding-bottom: 32px;
+}
+
+.landing__info {
+    padding-bottom: 40px;
+}
+
+.landing__trust {
+    padding-bottom: 48px;
 }
 
 .landing__img {
@@ -76,4 +118,115 @@ li {
     height: 350px;
 }
 
+/* FEATURES */
 
+.feature__container {
+    padding: 80px 0;
+    height: calc(100vh - 90px);
+}
+
+.feature__description {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.features {
+    padding-bottom: 16px;
+}
+
+.features__header {
+    font-size: 48px;
+}
+
+.feature__para {
+    width: 50%;
+}
+
+.services {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 56px 0;
+}
+
+.service {
+    display: flex;
+    width: calc(100%/3);
+}
+
+.service__description {
+    display: flex;
+    flex-direction: column;
+    padding: 0 32px 32px 32px;
+}
+
+.service__img {
+    border: 2px solid grey;
+    height: 24px;
+    width: 32px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 16px;
+}
+
+/* QUALITY WORK */ 
+
+.qw__container {
+    display: flex;
+    justify-content: center;
+    height: calc(100vh - 90px);
+
+}
+
+.qualitywork__header {
+    font-size: 60px;
+}
+
+/* STEPS */
+
+.step__container {
+    display: flex;
+    height: calc(100vh - 90px);
+}
+
+.step__title {
+    margin-bottom: 16px;
+    font-size: 16px;
+}
+
+.step__header {
+    font-size: 40px;
+}
+
+.step {
+    display: flex;
+    padding-top: 24px;
+}
+
+.step__number {
+    color: lightgrey;
+    font-size: 40px;
+    margin-right: 24px;
+}
+
+/* VALUE */
+
+.value__container {
+    display: flex;
+    height: calc(100vh - 90px);
+}
+
+.values__title {
+    margin-bottom: 24px;
+}
+
+.values__header {
+    font-size: 60px;
+}
+
+.value__containers {
+    display: flex;
+    justify-content: space-between;
+}
