--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html {
 .row {
     width: 100%;
     max-width: 1200px;
-    margin: 0 auto;          
+    margin: 0 auto;
   }
 
 .root {
@@ -42,14 +42,20 @@ p {
 .container {
     width: 50%;
     display: flex;
+    justify-content: center;
     flex-direction: column;
 }
 
 .img__wrapper {
     width: 50%;
     display: flex;
-    height: 30vh;
-    width: vw;
+    justify-content: center;
+    align-items: center;
+    height: 
+}
+
+img {
+    width: 500px;
 }
 
 #navi {
@@ -176,6 +182,7 @@ li {
 .qw__container {
     display: flex;
     justify-content: center;
+    align-items: center;
     height: calc(100vh - 90px);
 
 }
@@ -202,7 +209,7 @@ li {
 
 .step {
     display: flex;
-    padding-top: 24px;
+    margin-top: 24px;
 }
 
 .step__number {
@@ -226,7 +233,72 @@ li {
     font-size: 60px;
 }
 
-.value__containers {
+
+.val__can {
+    width: 50%;
+}
+
+/* PRICING */ 
+
+.price__container {
+    height: calc(100vh - 90px);
+}
+
+.pricing {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.price__title {
+    font-size: 16px;
+    margin-bottom: 24px;
+}
+
+.price__header {
+    font-size: 40px;
+    margin-bottom: 24px;
+}
+
+.pricing__para {
+    margin: 0 230px 32px 230px;
+}
+
+.plans {
+    display: flex;
+}
+
+.plan {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 35%;
+    margin: 24px;
+}
+
+.plan__details {
+    flex-direction: column;
+}
+
+.plan__detail {
+    margin: 16px;
+}
+
+/* TEST TIMONIALS */
+
+#testimonials {
+    height: calc(100vh - 90px);
+}
+
+.test__container {
+    display: flex;
+}
+
+.img__wrapper {
+    width: 50%;
+}
+
+.testimonal {
+    width: 50%;
 }
