--- a/style.css
+++ b/style.css
@@ -420,7 +420,7 @@ li {
 /* FAQS  */ 
 
 #faqs {
-    height: calc(110vh - 100px);
+    height: calc(140vh - 100px);
 }
 
 .faq__title {
@@ -437,6 +437,7 @@ li {
 .faq__description {
     display: flex;
     justify-content: center;
+    padding-bottom: 1rem;
 
 }
 
@@ -447,13 +448,76 @@ li {
     flex-direction: column;
 }
 
+.accordion-item {
+    background-color: lightgrey;
+    border-radius: .4rem;
+    margin-bottom: 1rem;
+    padding: 1rem;
+    box-shadow: .5rem 2px .5rem rgba(0, 0, 0, 1)
+}
+
+.accordion-link {
+    font-size: 1.6rem;
+    color: navy;
+    text-decoration: none;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem 0;
+}
+
+.accordion-link i {
+    color: navy;
+    padding: .5rem;
+}
+
+.minus {
+    display: none;
+}
+
+.answer {
+    max-height: 0;
+    overflow: hidden;
+    position: relative;
+    padding: 0 1rem;
+    transition: max-height 650ms;
+}
+
+.answer::before {
+    content: "";
+    position: absolute;
+    width: .2rem;
+    height: 90%;
+    background-color: navy;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+}
+
+.answer p{
+    font-size: 1.4rem;
+}
+
+.accordion-item:target .answer{
+    max-height: 20rem;
+}
+
+.accordion-item:target .accordion-link .positive{
+    display: none;
+}
+
+.accordion-item:target .accordion-link .minus{
+    display: block;
+}
+
 /* contact */ 
 
 .contact__container {
     display: flex;
     margin: 56px 0;
     padding: 100px;
-    background-color: navy;
+    background: linear-gradient(to bottom right, navy, blue);
     border-radius: 8px;
 }
 
@@ -462,6 +526,8 @@ li {
     justify-content: center;
     font-size: 24px;
     width: 50%;
+    color: white;
+    
 }
 
 .contact__buttons {
@@ -471,32 +537,58 @@ li {
     align-items: center;
 }
 
+.Start {
+    background-color: #7342d6;
+    color: white;
+    font-size: 1rem;
+    padding: 1rem;
+    border-radius: 2rem;
+    border: none;
+    max-width: 165px;
+    margin-right: 2rem;
+}
+
+.Contact {
+    background-color: #7342d6;
+    color: white;
+    font-size: 1rem;
+    padding: 1rem;
+    border-radius: 2rem;
+    border: none;
+    max-width: 165px;
+}
+
 /* footer */ 
 
-#footer {
-
+footer {
+    background: navy;
+    margin-top: 5rem;
 }
 
 .links {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    color: white;
 }
 
 .link {
-    margin: 90px;
+    padding: 6rem 0;
 }
 
 .link__row {
     flex-direction: column;
-    margin: 16px 0;
+    margin: 8px 0;
 }
 
 .link--click {
-    margin: 16px 0;
+    margin: 8px 0;
+    color: white;
 }
 
 .footer__info {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-top: solid grey 1px;
+    padding: 4rem;
 }
